# exocortex-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: agent.rs  bus.rs  conservation.rs  lib.rs  memory.rs  message.rs  resonance.rs  shadow.rs  space.rs  types.rs
tests/: agent.rs  conservation.rs  core.rs
